gitops/5gcore/ausf-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: open5gs-ausf
  labels:
    epc-mode: ausf
spec:
  selector:
    epc-mode: ausf
  ports:
    - protocol: TCP
      port: 80   
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open5gs-ausf-d
  labels:
    epc-mode: ausf
spec:
  replicas: 1
  selector:
    matchLabels:
      epc-mode: ausf
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        epc-mode: ausf
    spec:    
      containers:
        - name: ausf
          image: "docker.io/efatnar/open5gcore:v1.1"
          imagePullPolicy: IfNotPresent
          command: ["open5gs-ausfd", "-c", "/open5gs/config-map/ausf.yaml"]
          volumeMounts:
          - name: open5gs-ausf-config
            mountPath: /open5gs/config-map/ausf.yaml
            subPath: "ausf.yaml"
      volumes:
        - name: open5gs-ausf-config
          configMap:
            name: open5gs-ausf-config
