gitops/5gcore/nssf-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: open5gs-nssf
  labels:
    epc-mode: nssf
spec:
  selector:
    epc-mode: nssf
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 80  
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: open5gs-nssf-d
  labels:
    epc-mode: nssf
spec:
  replicas: 1
  selector:
    matchLabels:
      epc-mode: nssf
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        epc-mode: nssf
    spec:   
      containers:
        - name: nssf
          image: "docker.io/efatnar/open5gcore:v1.1"
          imagePullPolicy: IfNotPresent
          command: ["open5gs-nssfd", "-c", "/open5gs/config-map/nssf.yaml"]
          volumeMounts:
          - name: open5gs-nssf-config
            mountPath: /open5gs/config-map/nssf.yaml
            subPath: "nssf.yaml"          
      volumes:
        - name: open5gs-nssf-config
          configMap:
            name: open5gs-nssf-config
