gitops/5gcore/pcf-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: open5gs-pcf
  labels:
    epc-mode: pcf
spec:
  selector:
    epc-mode: pcf
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 80  
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: open5gs-pcf-d
  labels:
    epc-mode: pcf
spec:
  replicas: 1
  selector:
    matchLabels:
      epc-mode: pcf
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        epc-mode: pcf
    spec:    
      containers:
        - name: pcf
          image: "docker.io/efatnar/open5gcore:v1.1"
          imagePullPolicy: IfNotPresent
          command: ["open5gs-pcfd", "-c", "/open5gs/config-map/pcf.yaml"]
          volumeMounts:
          - name: open5gs-pcf-config
            mountPath: /open5gs/config-map/pcf.yaml
            subPath: "pcf.yaml"          
      volumes:
        - name: open5gs-pcf-config
          configMap:
            name: open5gs-pcf-config
