gitops/5gcore/smf-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: open5gs-smf
  labels:
    epc-mode: smf
spec:
  selector:
    epc-mode: smf
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 80  
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: open5gs-smf-d
  labels:
    epc-mode: smf
spec:
  replicas: 1
  selector:
    matchLabels:
      epc-mode: smf
  template:
    metadata:       
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        epc-mode: smf
    spec:   
      containers:
      - name: smf
        image: "docker.io/efatnar/open5gcore:v1.1"
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh", "-c"]
        args:
        - open5gs-smfd -c /open5gs/config-map/smf.yaml;
        volumeMounts:
          - name: open5gs-smf-config
            mountPath: /open5gs/config-map/smf.yaml
            subPath: "smf.yaml"                                       
      volumes:
        - name: open5gs-smf-config
          configMap:
            name: open5gs-smf-config
